--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}천지선공 홈페이지{% endblock%}
+{% block title %}혈기원 홈페이지{% endblock%}
 {% block content %}
 
 <section id="showcase">
@@ -51,44 +51,95 @@
     </div>
     </div>
     </section>
-    
-    <!-- Home Secton  -->
-    <section id="home-icons">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mt-3">
-            <h2>신선의 건강수련법</h2>
-            <p>신선은 내세를 말하지 않았다. 현세에서 극락을 누리는 법을 알았다. 몸을 어린애 상태로 되돌림으로써
-              새로운 세상을 얻었다. 천지선공(天地仙功)은 산중에서 전래되어 온 신선들의 심신수련법이다.
-              과거 젊은 시절 몸으로 거슬러 올라가는 공부다
-            </p>
-          </div>
-          <div class="col-md-4 mt-3">
-            <h2>나는 누구인가</h2>
-            <p>나는 원래 하나의 기운이었다. 그것이 상(像)으로 표현된 것이 나다. 나의 상은 몸이다. 몸은 대우주의 섭리를 알고 있다. 머리는 모른다. 몸은 미치도록 행공해야 본성을 드러낸다는 것이 천지선공의
-              가르침이다. 나의 주인은 몸이다. 마음이 아니다.</p>
-          </div>
-          <div class="col-md-4 mt-3">
-            <h2>몸의 문을 여는 호흡</h2>
-            <p>天은 陽이고 地는 陰이다. 陽을 마시고 陰을 뱉는 것이 천지선공의 호흡이다. 天氣를 제대로 득하면 몸은 만사형통이다. 최고의 행공이 호흡이다. 호흡에 깊이가 있어야 몸이 문을 열어준다. 척수를
-              맑게 하는 데 天氣가 으뜸이다.</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
-  <!-- Home Headig Section -->
-  <section id="home-heading" class="p-2">
-    <div class="dark-overlay">
-      <div class="row">
-        <div class="col">
-          <div class="container pt-2">
-            <h1>천 지 선 공 <br>(天 地 仙 功)</h1><br>
-                <p align="left">척추를 펴야 인생이 펴진다. 나의 주인은 몸이다. 마음이 아니다. 몸이 내 것이 아니라면 세상에 내 것이란 아무것도 없다. 몸이 내 것이 아니면 삶이 없다.</p>
-          </div>
+    <!-- Home Section -->
+    <section id="home-icons">
+        <div class="container">
+            <div class="row">
+                <!-- 첫 번째 칼럼 -->
+                <div class="col-md-4 mt-3">
+                    <article>
+                        <h2>무엇을 하는 곳인가</h2>
+                        <p>
+                            인간이 두 발로 걸으면서 두 손이 자유로워지고 문명이 발달하였지만 그 반대로 척추가 압박을 받게 되고 자연의 체계와 상충하면서 여러 질병이 발생하였습니다. 목, 허리 등의 척추 병과 여러 성인병은 척추가 제 자리에 있지 못하여 자세가 틀어진 데다가 필요 이상으로 많이 먹고 각종 스트레스에 시달리기 때문에 오는 현대병입니다.
+                            "혈기원(穴氣園)"은 척추를 바로 세워 척수를 충만 시키고 자연과의 단절된 관계를 회복시켜 건강과 젊음을 꾸준히 유지하는 내공(內功) 무예인 혈기공(穴氣功)을 수련하는 곳입니다.
+                        </p>
+                        <h4>혈기원 관(觀, 哲學)</h4>
+                        <ul>
+                            <li>몸이 나의 주인입니다. 몸을 머리의 도구로 생각하면 잘못입니다.</li>
+                            <li>서서 사는 동물이 죽을 때까지 바로 서지 못하면 비참한 것 입니다. 혈기공은 늙어서도 바로 걷고 내 기운으로 모든 것을 하기 위한 행공입니다.</li>
+                            <li>가장 중요한 근본은 말이나 지식이 아니라 몸입니다. 행공은 몸으로 하는 것. 몸이 주(主)가 되고 머리가 객(客)이 되어야 합니다. 학식과 지식을 내세우는 머리의 생각대로 몸은 결코 움직이지 않습니다.</li>
+                        </ul>
+                        <blockquote>
+                            <p>말이 없으면 말을 초월 할 수 있습니다.</p>
+                            <p>말로 아는 것은 아는 것이 아닙니다</p>
+                            <p>몸으로 알아야만 제대로 아는 것입니다</p>
+                        </blockquote>
+                    </article>
+                </div>
+
+                <!-- 두 번째 칼럼 -->
+                <div class="col-md-4 mt-3">
+                    <article>
+                        <h2>다른 선도(仙道)와 다른 점</h2>
+                        <ul>
+                            <li>지식(止息) 호흡을 하지않고 토(吐) 호흡 중시<br>
+                                지식호흡을 하지 않는 까닭은 호흡의 자연스러운 흐름을 인위적으로 끊어 놓기 때문이며 토호흡은 탁기를 배출하는 것을 우선으로 하기에 중시</li>
+                            <li>선골(仙骨)과 미골(尾骨)의 분리 중요<br>
+                                개와 쥐 같은 동물도 미골과 선골이 분리되어 움직이는데 인간은 척추 압박으로 인해 붙어 있슴. 수련을 통해 척추 마디마디를 분리하고 유연하게 만들면 천기의 소통이 더욱 활발. 직립보행에 따르는 문제점 보완</li>
+                        </ul>
+                    </article>
+                </div>
+
+                <!-- 세 번째 칼럼 -->
+                <div class="col-md-4 mt-3">
+                    <article>
+                        <h2>혈기공(穴氣功) 내용</h2>
+                        <p>
+                            건강의 근원은 올바른 자세이며, 올바른 자세는 척추가 제자리에 있는 것. 혈기원에서 수련하는 혈기공은 우리 몸의 관절을 풀고 호흡으로 뼈를 스트레칭하여 척추가 제자리를 찾도록 합니다. 4 부분으로 구성되어 있습니다.
+                        </p>
+                        <dl>
+                            <dt>1. 예비행공</dt>
+                            <dd>척추를 펴서 척추에 연결된 오장육부를 스트레칭 합니다. 반가부좌(결가부좌) 자세로 회음을 바닥에 붙이고 허리를 바로 세웁니다. 양 손가락 끝으로 밀어낸 기운으로 가슴을 펴고 척추를 바로 세워 오장육부가 제 공간을 찾아가게 하는 행공으로 11개 동작이 있습니다.</dd>
+                            <dt>2. 기초행공</dt>
+                            <dd>발목 관절을 풀고 대퇴부(미골, 회음)에서 힘을 발사하여 미골과 선골을 분리하는 행공으로 18개 동작이 있습니다.</dd>
+                            <dt>3. 집중행공</dt>
+                            <dd>대퇴부의 기운을 발사하여 가슴을 펴는 행공으로 36개 동작이 있습니다.</dd>
+                            <dt>4. 완벽행공</dt>
+                            <dd>전체적인 혈기공 동작의 마무리로 다리와 손의 움직임을 중심으로하는 행공으로 24개 동작이 있습니다.</dd>
+                        </dl>
+                    </article>
+                </div>
+
+                <div class="col-md-4 mt-3">
+                <article>
+                    <h2>우혈 선생님의 발자취</h2>
+                    <p>
+                        1965년 우혈(宇穴) 선생님, 29세에 내설악 한계령에서 천우(天宇: 1875~1982) 스승을 만나 17년간 산중 수련<br>
+                        * 무문부답(無問不答) 조건으로 입문<br>
+                        * 하늘의 기운, 천기, 생기를 수련을 통해 몸에 축적<br>
+                        ⇨ 젊음과 건강을 오래 유지하는 선도(仙道)<br>
+                    </p>
+                    <p>
+                        1985년 우혈 선생님, 서울 아현동에 첫 도장 개관<br>
+                        * “혈기도(穴氣道)” 이름 지음<br>
+                        * 성북동, 운니동, 사간동, 통의동, 사직동으로 도장 이전
+                    </p>
+                    <p>2007년 우혈 선생님 행공 동영상 제작</p>
+                    <p>
+                        2015년 행공 책 발간 (제호: ‘천지행공’- 척추를 펴면 인생이 펴진다)<br>
+                        => 2019년 개정판 발간 (제호: ‘천지선공’)
+                    </p>
+                    <p>
+                        2018년 “혈기원” 개원 (양재동)<br>
+                        이전 (일원동/2021년)
+                    </p>
+                    <p>2022년 “행공산책” 발간 / 이채형 사범 승단</p>
+                </article>
+                </div>
+
+            </div>
         </div>
-      </div>
-    </div>
   </section>
 
 <!-- INFO Section  -->
@@ -97,7 +148,7 @@
       <div class="row">
         <div class="col-6 align-self-center">
           <h3>더 자세히 알고 싶으신가요 ?</h3>
-          <p>천지선공은 우혈선생이 창시하신 혈기도의 원리를 그대로 계승한 수련법 입니다.</p>
+          <p>혈기공은 우혈선생이 창시하신 혈기도의 원리를 그대로 계승한 수련법 입니다.</p>
           <a href="/about" class="btn btn-outline-danger btn-lg">자세히 알아보기</a>
         </div>
         <div class="col-6 text-center">
@@ -128,7 +179,7 @@
             data-target="#videoModal">
               <i class="fa fa-play-circle m-3"></i>
             </a>
-            <h5 class="m-3">천지선공 자세 모음</h5>
+            <h5 class="m-3">혈기공 자세 모음</h5>
           </div>
         </div>
         <div class="col-4">
