--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="천지선공은 혈기도의 전통을 계승한 한국 고유의 신선도">
+    <meta name="description" content="혈기공은 혈기도의 전통을 계승한 한국 고유의 신선도">
     <meta name="google-site-verification" content="z__xCoA-21SDsRf28Ca-G7cYe1CuiGpTCj2viMSvKYI" />
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,7 +16,7 @@
   <div class="container">
   <nav class="navbar navbar-expand-sm navbar-light bg-success">
       <a class="navbar-brand" href="/home">
-        <img class="mr-3" src="/static/img/logo.png" style="height:35px;"><img src="/static/img/logo2.png" style="height:55px;">
+        <img class="mr-3" src="/static/img/logo.png" style="height:35px;"><img src="/static/img/logo_han.jpg" style="height:55px;">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
