--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}천지선공 찾아오는길{% endblock%}
+{% block title %}천지원 찾아오는길{% endblock%}
 {% block content %}
 
   <header id="page-header">
