--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,6 @@
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
 
     <!-- Wrapper for slides -->
@@ -18,22 +16,7 @@
       <div class="carousel-item active">
         <img class="d-block img-fluid" src="/static/img/carousel1.jpg" alt="IMG_5384" style="max-width: 100%; height: auto;">
         <div class="carousel-caption text-success">
-          <h3>한국고유의 <br>전통 선도(仙道)</h3>
-        </div>
-      </div>
-    
-      <div class="carousel-item">
-        <img class="d-block img-fluid" src="/static/img/IMG_5335.jpg" alt="IMG_2155" style="max-width: 100%; height: auto;">
-        <div class="carousel-caption text-danger">
-          <h3>척추를 펴야 <br>인생이 펴진다</h3>
-        </div>
-      </div>
-    
-      <div class="carousel-item">
-        <img class="d-block img-fluid" src="/static/img/carosel2_opt.jpg" alt="carosel2_opt"
-          style="max-width: 100%; height: auto;">
-        <div class="carousel-caption">
-          <h3>대퇴와 골반이 <br>건강의 기초</h3>
+          <h3>한국고유의 전통 선도(仙道)</h3>
         </div>
       </div>
     
