--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <div class="container">
   <nav class="navbar navbar-expand-sm navbar-light bg-success">
       <a class="navbar-brand" href="/home">
-        <img class="mr-3" src="/static/img/logo.png" style="height:35px;"><img src="/static/img/logo_han.jpg" style="height:55px;">
+        <img class="mr-3" src="/static/img/logo.png" style="height:35px;"><img src="/static/img/logo_han.png" style="height:55px;">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
             <a class="nav-link" href="/home">홈</a>
           </li>
           <li class="nav-item {% if about %}active{% endif %}">
-            <a class="nav-link" href="/about">천지선공 소개</a>
+            <a class="nav-link" href="/about">혈기공 소개</a>
           </li>
           <li class="nav-item {% if services %}active{% endif %}">
             <a class="nav-link" href="/services">행공 안내</a>
