--- a/templates/services.html
+++ b/templates/services.html
@@ -229,7 +229,7 @@
             </div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
-                매월 마지막 주 수요일이 승급 심사일 입니다.
+                매월 마지막 주 금요일이 승급 심사일 입니다.
               </div>
             </div>
           </div>
