--- a/templates/home.html
+++ b/templates/home.html
@@ -141,17 +141,17 @@
       <div class="row">
         <div class="col-4">
           <div class="container p-3">
-            <a href="" class="video" data-video="https://www.youtube.com/embed/Y7--5j9-amc"
+            <a href="" class="video" data-video="https://www.youtube.com/embed/9X_66yJrdpE"
             data-toggle="modal"
             data-target="#videoModal">
               <i class="fa fa-play-circle m-3"></i>
             </a>
-            <h5 class="m-3">허리 굽히기</h5>
+            <h5 class="m-3">허리 굽혀 펴기</h5>
           </div>
         </div>
         <div class="col-4">
           <div class="container p-3">
-            <a href="" class="video" data-video="https://www.youtube.com/embed/1eG-9Ilfr2s"
+            <a href="" class="video" data-video="https://www.youtube.com/embed/89T4sWadj1w"
             data-toggle="modal"
             data-target="#videoModal">
               <i class="fa fa-play-circle m-3"></i>
@@ -161,12 +161,12 @@
         </div>
         <div class="col-4">
           <div class="container p-3">
-            <a href="" class="video" data-video="https://www.youtube.com/embed/pX61kVgXUW4"
+            <a href="" class="video" data-video="https://www.youtube.com/embed/ArUL2Pye_Eg"
             data-toggle="modal"
             data-target="#videoModal">
               <i class="fa fa-play-circle m-3"></i>
             </a>
-            <h5 class="m-3">승급심사</h5>
+            <h5 class="m-3">혈기원 승급 심사</h5>
           </div>
         </div>
       </div>
