--- a/templates/home.html
+++ b/templates/home.html
@@ -173,4 +173,92 @@
     </div>
   </section>
 
+  <!-- Phto gallery -->
+  <section id="gallery" class="py-5">
+    <div class="container">
+      <h1 class="text-center">단체행공 모습</h1>
+      <div class="row text-center text-lg-left">
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_1.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_1.jpg">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_2.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_2.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_3.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_3.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_4.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_4.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_5.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_5.jpg" alt="">
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_6.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_6.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_7.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_7.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_8.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_8.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_9.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_9.jpg">
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_10.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_10.jpg">
+          </a>
+        </div>
+
+
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_11.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_11.jpg">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_12.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_12.jpg">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_13.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_13.jpg">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_14.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_14.jpg">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/혈기원단체_15.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_15.jpg">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 {% endblock %}
