--- a/templates/services.html
+++ b/templates/services.html
@@ -33,14 +33,14 @@
                 <td>김윤정</td>
                 <td></td>
                 <td>김윤정</td>
-                <td></td>
+                <td>김윤정</td>
                 <td>김윤정</td>
                 <td></td>
               </tr>
               <tr>
                 <th scope="row">4시</th>
                 <td>김윤정</td>
-                <td>김윤정</td>
+                <td>최복임</td>
                 <td>최복임</td>
                 <td>김윤정</td>
                 <td>정연우</td>
