--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="혈기공은 혈기도의 전통을 계승한 한국 고유의 신선도">
     <meta name="google-site-verification" content="z__xCoA-21SDsRf28Ca-G7cYe1CuiGpTCj2viMSvKYI" />
+    <meta name="naver-site-verification" content="a163d0182e8ba4ebcf44a99c2f691c9e5493866d" />
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css')}}"">
