--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="혈기공은 혈기도의 전통을 계승한 한국 고유의 신선도">
+    <meta name="description" content="혈기원, 혈기원 홈페이지, 혈기공, 혈기도, 신선도">
     <meta name="google-site-verification" content="z__xCoA-21SDsRf28Ca-G7cYe1CuiGpTCj2viMSvKYI" />
     <meta name="naver-site-verification" content="a163d0182e8ba4ebcf44a99c2f691c9e5493866d" />
     <title>{% block title %}{% endblock %}</title>
