--- a/templates/home.html
+++ b/templates/home.html
@@ -52,8 +52,8 @@
                         <p>• 서서 사는 동물이 죽을 때까지 바로 서지 못하면 비참한 것 입니다.<br> 혈기공은 늙어서도 바로 걷고 내 기운으로 모든 것을 하기 위한 행공입니다.</p>
                         <p>• 가장 중요한 근본은 말이나 지식이 아니라 몸입니다.<br> 행공은 몸으로 하는 것. 몸이 주(主)가 되고 머리가 객(客)이 되어야 합니다.<br> 학식과 지식을 내세우는 머리의 생각대로 몸은 결코 움직이지 않습니다.</p>
                         <p>• 말이 없으면 말을 초월 할 수 있습니다.</p>
-                        <p>• 말로 아는 것은 아는 것이 아닙니다</p>
-                        <p>• 몸으로 알아야만 제대로 아는 것입니다</p>
+                        <p>• 말로 아는 것은 아는 것이 아닙니다.<br>
+                          <span style="padding-left: 10px;">몸으로 알아야만 제대로 아는 것입니다.</span></p>
                     </article>
                 </div>
 
@@ -110,7 +110,7 @@
                     </p>
                     <p>
                         2018년<br> “혈기원” 개원 (양재동)<br>
-                        이전 (일원동/2021년)
+                        <span style="padding-left: 65px;">이전 (일원동/2021년)</span>
                     </p>
                     <p>2022년<br> “행공산책” 발간 / 이채형 사범 승단</p>
                 </article>
@@ -156,7 +156,7 @@
             data-target="#videoModal">
               <i class="fa fa-play-circle m-3"></i>
             </a>
-            <h6 class="m-3">혈기공 자세 모음</h6>
+            <h5 class="m-3">자세 모음</h5>
           </div>
         </div>
         <div class="col-4">
@@ -166,7 +166,7 @@
             data-target="#videoModal">
               <i class="fa fa-play-circle m-3"></i>
             </a>
-            <h6 class="m-3">혈기원 승급 심사</h6>
+            <h5 class="m-3">승급 심사</h5>
           </div>
         </div>
       </div>
