--- a/templates/home.html
+++ b/templates/home.html
@@ -81,7 +81,7 @@
                             <dd>척추를 펴서 척추에 연결된 오장육부를 스트레칭 합니다. 반가부좌(결가부좌) 자세로 회음을 바닥에 붙이고 허리를 바로 세웁니다. 양 손가락 끝으로 밀어낸 기운으로 가슴을 펴고 척추를 바로 세워 오장육부가 제 공간을 찾아가게 하는 행공으로 11개 동작이 있습니다.</dd>
                             <dt>2. 기초 행공</dt>
                             <dd>발목 관절을 풀고 대퇴부(미골, 회음)에서 힘을 발사하여 미골과 선골을 분리하는 행공으로 18개 동작이 있습니다.</dd>
-                            <dt>3. 집중 행공</dt>
+                            <dt>3. 본행공</dt>
                             <dd>대퇴부의 기운을 발사하여 가슴을 펴는 행공으로 36개 동작이 있습니다.</dd>
                             <dt>4. 마무리 행공</dt>
                             <dd>전체적인 혈기공 동작의 마무리로 다리와 손의 움직임을 중심으로하는 행공으로 24개 동작이 있습니다.</dd>
@@ -179,8 +179,8 @@
       <h1 class="text-center">단체행공 모습</h1>
       <div class="row text-center text-lg-left">
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_1.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_1.jpg">
+          <a href="/static/img/혈기원단체_7.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_7.jpg">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
@@ -210,8 +210,8 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_7.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_7.jpg" alt="">
+          <a href="/static/img/혈기원단체_1.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_1.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
@@ -248,8 +248,8 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_14.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_14.jpg">
+          <a href="/static/img/한종만_garden.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/한종만_garden.jpg">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
