--- a/templates/home.html
+++ b/templates/home.html
@@ -80,11 +80,11 @@
                             <dt>1. 예비 행공</dt>
                             <dd>척추를 펴서 척추에 연결된 오장육부를 스트레칭 합니다. 반가부좌(결가부좌) 자세로 회음을 바닥에 붙이고 허리를 바로 세웁니다. 양 손가락 끝으로 밀어낸 기운으로 가슴을 펴고 척추를 바로 세워 오장육부가 제 공간을 찾아가게 하는 행공으로 11개 동작이 있습니다.</dd>
                             <dt>2. 기초 행공</dt>
-                            <dd>발목 관절을 풀고 대퇴부(미골, 회음)에서 힘을 발사하여 미골과 선골을 분리하는 행공으로 18개 동작이 있습니다.</dd>
+                            <dd>발목 관절을 풀고 대퇴부(미골, 회음)에서 발가락 끝까지 기운을 밀어내어 오금을 펴는 행공으로 발목돌리기, 다리모아 허리숙이기, 다리벌려 허리숙이기, 90도 벌려 허리숙이기, 일자벌리기, 가위벌리기 등 20여 동작이 있습니다. 모든 기운은 대퇴부에서 나아가며 상체는 호흡 속으로 탈기하여 내려 놓습니다.</dd>
                             <dt>3. 본행공</dt>
-                            <dd>대퇴부의 기운을 발사하여 가슴을 펴는 행공으로 36개 동작이 있습니다.</dd>
+                            <dd>일어서서 척추를 경추부터 요추까지 마디마디 풀고 무릎 행공을 합니다. 목돌리기, 어깨돌리기, 허리돌리기, 가슴펴기, 무릎굽히기 등 30여 동작이 있습니다. 그리고 본행공의 핵심이며 혈기공의 꽃인 "허리굽혀펴기" 행공을 합니다.</dd>
                             <dt>4. 마무리 행공</dt>
-                            <dd>전체적인 혈기공 동작의 마무리로 다리와 손의 움직임을 중심으로하는 행공으로 24개 동작이 있습니다.</dd>
+                            <dd>"허리굽혀펴기" 행공후 정리하는 행공입니다. 무릎과 발목을 풀고 말타기, 하복부 발차기 등 15여 동작이 있습니다.</dd>
                         </dl>
                     </article>
                 </div>
@@ -113,6 +113,7 @@
                         <span style="padding-left: 65px;">이전 (일원동/2021년)</span>
                     </p>
                     <p>2022년<br> “행공산책” 발간 / 이채형 사범 승단</p>
+                    <p>2023년<br> 김윤정 사범 2단 승단</p>
                 </article>
                 </div>
 
