--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="혈기원, 혈기원 홈페이지, 혈기공, 혈기도, 신선도">
     <meta name="google-site-verification" content="z__xCoA-21SDsRf28Ca-G7cYe1CuiGpTCj2viMSvKYI" />
+    <meta name="naver-site-verification" content="74cf3bb479f32336eb921d17c332bf2b47c59df6" />
     <meta name="naver-site-verification" content="a163d0182e8ba4ebcf44a99c2f691c9e5493866d" />
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
