--- a/templates/home.html
+++ b/templates/home.html
@@ -112,8 +112,7 @@
                         2018년<br> “혈기원” 개원 (양재동)<br>
                         <span style="padding-left: 65px;">이전 (일원동/2021년)</span>
                     </p>
-                    <p>2022년<br> “행공산책” 발간 / 이채형 사범 승단</p>
-                    <p>2023년<br> 김윤정 사범 2단 승단</p>
+                    <p>2022년<br> “행공산책” 발간</p>
                 </article>
                 </div>
 
