--- a/templates/home.html
+++ b/templates/home.html
@@ -184,8 +184,8 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_2.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_2.jpg" alt="">
+          <a href="/static/img/혈기원단체_2.png" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_2.png" alt="">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
@@ -194,13 +194,13 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_4.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_4.jpg" alt="">
+          <a href="/static/img/혈기원단체_4.png" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_4.png" alt="">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_5.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_5.jpg" alt="">
+          <a href="/static/img/혈기원단체_5.png" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_5.png" alt="">
           </a>
         </div>
 
@@ -210,8 +210,8 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_1.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_1.jpg" alt="">
+          <a href="/static/img/혈기원단체_1.png" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_1.png" alt="">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
@@ -253,8 +253,8 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_15.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_15.jpg">
+          <a href="/static/img/혈기원단체_15.png" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_15.png">
           </a>
         </div>
       </div>
