--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,39 @@
     <meta name="description" content="혈기원, 혈기원 홈페이지, 혈기공, 혈기도, 신선도">
     <meta name="google-site-verification" content="AzXFaT8JGIF2zEpe-GKJ6e1vbB-mxFuJR1fHXMWi8_s" />
     <meta name="naver-site-verification" content="74cf3bb479f32336eb921d17c332bf2b47c59df6" />
+    <?xml version="1.0" encoding="UTF-8"?>
+    <urlset
+          xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"
+          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+          xsi:schemaLocation="http://www.sitemaps.org/schemas/sitemap/0.9
+                http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd">
+      <!-- created with Free Online Sitemap Generator www.xml-sitemaps.com -->
+      <url>
+        <loc>http://www.hkwon.co.kr/</loc>
+        <lastmod>2023-10-14T06:05:05+00:00</lastmod>
+        <priority>1.00</priority>
+      </url>
+      <url>
+        <loc>http://www.hkwon.co.kr/home/</loc>
+        <lastmod>2023-10-14T06:05:05+00:00</lastmod>
+        <priority>0.80</priority>
+      </url>
+      <url>
+        <loc>http://www.hkwon.co.kr/about/</loc>
+        <lastmod>2023-10-14T06:05:05+00:00</lastmod>
+        <priority>0.80</priority>
+      </url>
+      <url>
+        <loc>http://www.hkwon.co.kr/services/</loc>
+        <lastmod>2023-10-14T06:05:05+00:00</lastmod>
+        <priority>0.80</priority>
+      </url>
+      <url>
+        <loc>http://www.hkwon.co.kr/contact/</loc>
+        <lastmod>2023-10-14T06:05:05+00:00</lastmod>
+        <priority>0.80</priority>
+      </url>
+    </urlset>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css')}}"">
