--- a/templates/services.html
+++ b/templates/services.html
@@ -47,7 +47,7 @@
                 <td>집중행공</td>
               </tr>
               <tr>
-                <th scope="row">7시</th>
+                <th scope="row">6시30분</th>
                 <td>최복임</td>
                 <td>김윤정</td>
                 <td>김윤정</td>
