--- a/templates/home.html
+++ b/templates/home.html
@@ -179,13 +179,13 @@
       <h1 class="text-center">단체행공 모습</h1>
       <div class="row text-center text-lg-left">
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_7.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_7.jpg">
+          <a href="/static/img/발차기.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/발차기.jpg">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_2.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_2.jpg" alt="">
+          <a href="/static/img/토호흡.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/토호흡.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
@@ -199,8 +199,8 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_5.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_5.jpg" alt="">
+          <a href="/static/img/혈기원단체_7.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_7.jpg" alt="">
           </a>
         </div>
 
