--- a/templates/home.html
+++ b/templates/home.html
@@ -42,12 +42,12 @@
                 <!-- 첫 번째 칼럼 -->
                 <div class="col-md-4 mt-3">
                     <article>
-                        <h2>무엇을 하는 곳인가</h2>
+                        <h2>혈기원 소개</h2>
                         <p>
                             인간이 두 발로 걸으면서 두 손이 자유로워지고 문명이 발달하였지만 그 반대로 척추가 압박을 받게 되고 자연의 체계와 상충하면서 여러 질병이 발생하였습니다. 목, 허리 등의 척추 병과 여러 성인병은 척추가 제 자리에 있지 못하여 자세가 틀어진 데다가 필요 이상으로 많이 먹고 각종 스트레스에 시달리기 때문에 오는 현대병입니다.
                             "혈기원(穴氣園)"은 척추를 바로 세워 척수를 충만 시키고 자연과의 단절된 관계를 회복시켜 건강과 젊음을 꾸준히 유지하는 내공(內功) 무예인 혈기공(穴氣功)을 수련하는 곳입니다.
                         </p>
-                        <h2>혈기원 관(觀, 哲學)</h2>
+                        <h2>혈기원의 관(觀, 哲學)</h2>
                         <p>• 몸이 나의 주인입니다.<br> 몸을 머리의 도구로 생각하면 잘못입니다.</p>
                         <p>• 서서 사는 동물이 죽을 때까지 바로 서지 못하면 비참한 것 입니다.<br> 혈기공은 늙어서도 바로 걷고 내 기운으로 모든 것을 하기 위한 행공입니다.</p>
                         <p>• 가장 중요한 근본은 말이나 지식이 아니라 몸입니다.<br> 행공은 몸으로 하는 것. 몸이 주(主)가 되고 머리가 객(客)이 되어야 합니다.<br> 학식과 지식을 내세우는 머리의 생각대로 몸은 결코 움직이지 않습니다.</p>
@@ -112,7 +112,7 @@
                         2018년<br> “혈기원” 개원 (양재동)<br>
                         <span style="padding-left: 65px;">이전 (일원동/2021년)</span>
                     </p>
-                    <p>2022년<br> “행공산책” 발간</p>
+                    <p>2022년<br> “행공산책” 발간/개정판(2024)</p>
                 </article>
                 </div>
 
