--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
                 <!-- 첫 번째 칼럼 -->
                 <div class="col-md-4 mt-3">
                     <article>
-                        <h2>혈기원 소개</h2>
+                        <h2>혈기원(穴氣園)은</h2>
                         <p>
                             인간이 두 발로 걸으면서 두 손이 자유로워지고 문명이 발달하였지만 그 반대로 척추가 압박을 받게 되고 자연의 체계와 상충하면서 여러 질병이 발생하였습니다. 목, 허리 등의 척추 병과 여러 성인병은 척추가 제 자리에 있지 못하여 자세가 틀어진 데다가 필요 이상으로 많이 먹고 각종 스트레스에 시달리기 때문에 오는 현대병입니다.
                             "혈기원(穴氣園)"은 척추를 바로 세워 척수를 충만 시키고 자연과의 단절된 관계를 회복시켜 건강과 젊음을 꾸준히 유지하는 내공(內功) 무예인 혈기공(穴氣功)을 수련하는 곳입니다.
