--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}혈기공에 관하여{% endblock%}
+{% block title %}혈기행공에 관하여{% endblock%}
 {% block content %}
 
 
@@ -11,7 +11,7 @@
           <h2 class="mt-3">몸의 줄기 척추를 튼튼하게</h2>
           <p>산과 언덕은 기운이 다르다. 산은 줄기와 맥(脈)을 지니고 있지만 언덕엔 줄기와 맥의 기운이 없다.
             인간의 몸은 언덕이 아니라 산이다. 척추라는 줄기를 지니고 있다. 인간의 모든 것은 척추를 둘러싸기 위한
-            전주곡일 뿐이다. 태아가 어머니 뱃속에서 자랄 때 가장 먼저 형성되는 것이 척추 속에 들어 있는 척수이다. 혈기공의 꽃은 몸의 줄기인 척추를 튼튼하게 하는 것이다.</p>
+            전주곡일 뿐이다. 태아가 어머니 뱃속에서 자랄 때 가장 먼저 형성되는 것이 척추 속에 들어 있는 척수이다. 혈기행공의 꽃은 몸의 줄기인 척추를 튼튼하게 하는 것이다.</p>
         </div>
         <div class="col-md-3">
           <div class="d-flex justify-content-center">
@@ -38,7 +38,7 @@
           <div class="bg-success text-left text-white">
             <div class="card-body">
                 <h3>기초행공</h3><br>
-                <p>혈기공에서 목, 허리, 발목을 ‘3돌기’라고 한다 이 3곳이 잘 돌아 가야 건강하다. 특히 발목은 몸무게를 평생 지탱하는 일을 한다. 비 뚤어진 자세와 병의 근원은 발에서 비롯된다고 해도 과언이 아니다.</p>
+                <p>혈기행공에서 목, 허리, 발목을 ‘3돌기’라고 한다 이 3곳이 잘 돌아 가야 건강하다. 특히 발목은 몸무게를 평생 지탱하는 일을 한다. 비 뚤어진 자세와 병의 근원은 발에서 비롯된다고 해도 과언이 아니다.</p>
                 <a href="#gicho" class="btn btn-primary">자세히 보기</a>
             </div>
           </div>
@@ -75,7 +75,7 @@
           <div class="bg-success text-left text-white">
             <div class="card-body">
                 <h3>나를 찾는 호흡</h3><br>
-                <p>대우주의 에너지로 잃어버린 나의 능력을 되찾을 수 있다. 혈기공을 하면 대우주의 에너지가 내 몸 속으로 들어와서 뼛속에 쌓이게 된다. 대우주의 에너지와 내가 합일(合一)이 될 때 비로소 나를 찾게 된다.</p>
+                <p>대우주의 에너지로 잃어버린 나의 능력을 되찾을 수 있다. 혈기행공을 하면 대우주의 에너지가 내 몸 속으로 들어와서 뼛속에 쌓이게 된다. 대우주의 에너지와 내가 합일(合一)이 될 때 비로소 나를 찾게 된다.</p>
             </div>
           </div>
         </div>
@@ -259,7 +259,7 @@
       <div class="row">
         <div class="col-md-9 align-self-center">
           발목 돌리기<br>
-          혈기공에서 목, 허리, 발목을 ‘3돌기’라고 한다 이 3곳이 잘 돌아 가야 건강하다. 특히 발목은 몸무게를 평생 지탱하는 일을 한다. 비 뚤어진 자세와 병의 근원은 발에서 비롯된다고 해도 과언이 아니다.<br>
+          혈기행공에서 목, 허리, 발목을 ‘3돌기’라고 한다 이 3곳이 잘 돌아 가야 건강하다. 특히 발목은 몸무게를 평생 지탱하는 일을 한다. 비 뚤어진 자세와 병의 근원은 발에서 비롯된다고 해도 과언이 아니다.<br>
           발목 돌리기는 오른쪽 다리를 쭉 펴고 왼 다리의 무릎을 접어 정 강이 부분을 오른 다리 위에 올려 놓는다. 그 다음 왼손 엄지손가락 으로 왼발 복사뼈 바로 밑의 조해혈을 눌러주고 오른손으로 왼발의 발가락 부분을 가볍게 감싸 쥐고 발등이 당길 정도로 발목을 크고 부드럽게 돌린다.
         </div>
         <div class="col-md-3 my-auto">
