--- a/templates/home.html
+++ b/templates/home.html
@@ -45,11 +45,11 @@
                         <h2>혈기원(穴氣園)은</h2>
                         <p>
                             인간이 두 발로 걸으면서 두 손이 자유로워지고 문명이 발달하였지만 그 반대로 척추가 압박을 받게 되고 자연의 체계와 상충하면서 여러 질병이 발생하였습니다. 목, 허리 등의 척추 병과 여러 성인병은 척추가 제 자리에 있지 못하여 자세가 틀어진 데다가 필요 이상으로 많이 먹고 각종 스트레스에 시달리기 때문에 오는 현대병입니다.
-                            "혈기원(穴氣園)"은 척추를 바로 세워 척수를 충만 시키고 자연과의 단절된 관계를 회복시켜 건강과 젊음을 꾸준히 유지하는 내공(內功) 무예인 혈기공(穴氣功)을 수련하는 곳입니다.
+                            "혈기원(穴氣園)"은 척추를 바로 세워 척수를 충만 시키고 자연과의 단절된 관계를 회복시켜 건강과 젊음을 꾸준히 유지하는 내공(內功) 무예인 혈기행공(穴氣行功)을 수련하는 곳입니다.
                         </p>
                         <h2>혈기원의 관(觀, 哲學)</h2>
                         <p>• 몸이 나의 주인입니다.<br> 몸을 머리의 도구로 생각하면 잘못입니다.</p>
-                        <p>• 서서 사는 동물이 죽을 때까지 바로 서지 못하면 비참한 것 입니다.<br> 혈기공은 늙어서도 바로 걷고 내 기운으로 모든 것을 하기 위한 행공입니다.</p>
+                        <p>• 서서 사는 동물이 죽을 때까지 바로 서지 못하면 비참한 것 입니다.<br> 혈기행공은 늙어서도 바로 걷고 내 기운으로 모든 것을 하기 위한 행공입니다.</p>
                         <p>• 가장 중요한 근본은 말이나 지식이 아니라 몸입니다.<br> 행공은 몸으로 하는 것. 몸이 주(主)가 되고 머리가 객(客)이 되어야 합니다.<br> 학식과 지식을 내세우는 머리의 생각대로 몸은 결코 움직이지 않습니다.</p>
                         <p>• 말이 없으면 말을 초월 할 수 있습니다.</p>
                         <p>• 말로 아는 것은 아는 것이 아닙니다.<br>
@@ -72,9 +72,9 @@
                 <!-- 세 번째 칼럼 -->
                 <div class="col-md-4 mt-3">
                     <article>
-                        <h2>혈기공(穴氣功) 내용</h2>
+                        <h2>혈기행공(穴氣行功) 내용</h2>
                         <p>
-                            건강의 근원은 올바른 자세이며, 올바른 자세는 척추가 제자리에 있는 것. 혈기원에서 수련하는 혈기공은 우리 몸의 관절을 풀고 호흡으로 뼈를 스트레칭하여 척추가 제자리를 찾도록 합니다. 4 부분으로 구성되어 있습니다.
+                            건강의 근원은 올바른 자세이며, 올바른 자세는 척추가 제자리에 있는 것. 혈기원에서 수련하는 혈기행공은 우리 몸의 관절을 풀고 호흡으로 뼈를 스트레칭하여 척추가 제자리를 찾도록 합니다. 4 부분으로 구성되어 있습니다.
                         </p>
                         <dl>
                             <dt>1. 예비 행공</dt>
@@ -82,7 +82,7 @@
                             <dt>2. 기초 행공</dt>
                             <dd>발목 관절을 풀고 대퇴부(미골, 회음)에서 발가락 끝까지 기운을 밀어내어 오금을 펴는 행공으로 발목돌리기, 다리모아 허리숙이기, 다리벌려 허리숙이기, 90도 벌려 허리숙이기, 일자벌리기, 가위벌리기 등 20여 동작이 있습니다. 모든 기운은 대퇴부에서 나아가며 상체는 호흡 속으로 탈기하여 내려 놓습니다.</dd>
                             <dt>3. 본행공</dt>
-                            <dd>일어서서 척추를 경추부터 요추까지 마디마디 풀고 무릎 행공을 합니다. 목돌리기, 어깨돌리기, 허리돌리기, 가슴펴기, 무릎굽히기 등 30여 동작이 있습니다. 그리고 본행공의 핵심이며 혈기공의 꽃인 "허리굽혀펴기" 행공을 합니다.</dd>
+                            <dd>일어서서 척추를 경추부터 요추까지 마디마디 풀고 무릎 행공을 합니다. 목돌리기, 어깨돌리기, 허리돌리기, 가슴펴기, 무릎굽히기 등 30여 동작이 있습니다. 그리고 본행공의 핵심이며 혈기행공의 꽃인 "허리굽혀펴기" 행공을 합니다.</dd>
                             <dt>4. 마무리 행공</dt>
                             <dd>"허리굽혀펴기" 행공후 정리하는 행공입니다. 무릎과 발목을 풀고 말타기, 하복부 발차기 등 15여 동작이 있습니다.</dd>
                         </dl>
