--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="혈기원, 혈기원 홈페이지, 혈기공, 혈기도, 신선도">
+    <meta name="description" content="혈기원, 혈기원 홈페이지, 혈기행공, 혈기도, 신선도">
     <meta name="google-site-verification" content="AzXFaT8JGIF2zEpe-GKJ6e1vbB-mxFuJR1fHXMWi8_s" />
     <meta name="naver-site-verification" content="74cf3bb479f32336eb921d17c332bf2b47c59df6" />
     <title>{% block title %}{% endblock %}</title>
@@ -28,7 +28,7 @@
             <a class="nav-link" href="/home">홈</a>
           </li>
           <li class="nav-item {% if about %}active{% endif %}">
-            <a class="nav-link" href="/about">혈기공 소개</a>
+            <a class="nav-link" href="/about">혈기행공 소개</a>
           </li>
           <li class="nav-item {% if services %}active{% endif %}">
             <a class="nav-link" href="/services">행공 안내</a>
