--- a/templates/services.html
+++ b/templates/services.html
@@ -256,7 +256,7 @@
             <div class="card-header" role="tab" id="headingFour">
               <h5 class="mb-0">
                 <a data-toggle="collapse" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-                  혈기공에서 말하는 혈(穴)이란 무엇인가요 ?
+                  혈기행공에서 말하는 혈(穴)이란 무엇인가요 ?
                 </a>
               </h5>
             </div>
