--- a/templates/home.html
+++ b/templates/home.html
@@ -227,8 +227,8 @@
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_4.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_4.jpg" alt="">
+          <a href="/static/img/9번째_사진.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/9번째_사진.jpg" alt="">
           </a>
         </div>
 
@@ -245,8 +245,8 @@
         </div>
         
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_13.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_13.jpg">
+          <a href="/static/img/12번째_사진.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/12번째_사진.jpg">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
@@ -255,8 +255,8 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_15.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_15.jpg">
+          <a href="/static/img/14번째_사진.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/14번째_사진.jpg">
           </a>
         </div>
 
