--- a/templates/home.html
+++ b/templates/home.html
@@ -94,7 +94,7 @@
                     <h2>혈기원 발자취</h2>
                     <p>
                         1965년<br> 우혈(宇穴) 선생님, 29세에 내설악 한계령에서 천우(天宇: 1875~1982) 스승을 만나 17년간 산중 수련<br>
-                        * 무문부답(無問不答) 조건으로 입문<br>
+                        * 무문무답(無問無答) 조건으로 입문<br>
                         * 하늘의 기운, 천기, 생기를 수련을 통해 몸에 축적<br>
                         ⇨ 젊음과 건강을 오래 유지하는 선도(仙道)<br>
                     </p>
@@ -105,14 +105,14 @@
                     </p>
                     <p>2007년<br> 우혈 선생님 행공 동영상 제작</p>
                     <p>
-                        2015년<br> 행공 책 발간 (제호: ‘천지행공’- 척추를 펴면 인생이 펴진다)<br>
-                        => 2019년 개정판 발간 (제호: ‘천지선공’)
-                    </p>
-                    <p>
                         2018년<br> “혈기원” 개원 (양재동)<br>
                         <span style="padding-left: 65px;">이전 (일원동/2021년)</span>
                     </p>
-                    <p>2022년<br> “행공산책” 발간/개정판(2024)</p>
+                    <p>2022년<br> “행공산책” 발간</p>
+                    <p>
+                      2024년<br> “혈기행공” 책 발간 (제호: '물과 땅 호흡과 몸')<br>
+                      "행공산책" 개정판 발간
+                    </p>
                 </article>
                 </div>
 
