--- a/templates/home.html
+++ b/templates/home.html
@@ -110,8 +110,12 @@
                     </p>
                     <p>2022년<br> “행공산책” 발간</p>
                     <p>
-                      2024년<br> “혈기행공” 책 발간 (제호: '물과 땅 호흡과 몸')<br>
-                      "행공산책" 개정판 발간
+                      2023년<br> “혈기원” 홈페이지 운영 (www.hkwon.co.kr)<br>
+                      <span style="padding-left: 65px;">밴드 운영 (행공, 행사 자료실)</span>
+                    </p>
+                    <p>
+                      2024년<br> * “혈기행공” 책 발간 (제호: '물과 땅 호흡과 몸')<br>
+                      * "행공산책" 개정판 발간
                     </p>
                 </article>
                 </div>
