--- a/templates/home.html
+++ b/templates/home.html
@@ -189,8 +189,8 @@
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_3.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_3.jpg" alt="">
+          <a href="/static/img/허리숙이기_1.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/허리숙이기_1.jpg" alt="">
           </a>
         </div>
 
@@ -225,8 +225,8 @@
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_9.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_9.jpg">
+          <a href="/static/img/허리굽히기_2.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/허리굽히기_2.jpg" alt="">
           </a>
         </div>
 
@@ -243,30 +243,28 @@
         </div> 
 
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/혈기원단체_10.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/혈기원단체_10.jpg">
-          </a>
-        </div>
-        
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/12번째_사진.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/12번째_사진.jpg">
+          <a href="/static/img/1.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/1.jpg">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/한종만_garden.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/한종만_garden.jpg">
+          <a href="/static/img/1743379574284.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/1743379574284.jpg">
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/14번째_사진.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/14번째_사진.jpg">
+          <a href="/static/img/1_1.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/1_1.jpg">
           </a>
         </div>
-
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/static/img/단체종파티.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="/static/img/단체종파티.jpg">
+          <a href="/static/img/1_2.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/1_2.jpg">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="/static/img/3.jpg" data-toggle="lightbox" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/img/3.jpg">
           </a>
         </div>
       </div>
