--- a/templates/services.html
+++ b/templates/services.html
@@ -49,9 +49,9 @@
               <tr>
                 <th scope="row">6시30분</th>
                 <td>최복임</td>
-                <td>서문수</td>
                 <td>김윤정</td>
                 <td>김윤정</td>
+                <td>이연희</td>
                 <td></td>
                 <td>월1-2회</td>
               </tr>
