--- a/templates/services.html
+++ b/templates/services.html
@@ -38,7 +38,7 @@
                 <td></td>
               </tr>
               <tr>
-                <th scope="row">4시</th>
+                <th scope="row">3시30분</th>
                 <td>김윤정</td>
                 <td>김윤정</td>
                 <td>최복임</td>
